# doctor-iligal-model

./: .gitignore  GLT.py  README.md  acne_classify.pt  classify_acne.py  doc.txt  downlonad_image.py  main.py  nedataset6.pt  new.pt  predict_acne.py  pull_model.py  pyproject.toml  sample.env  send_message.py  ver1.pt  ver3.pt  ver5.pt  ver7.pt
